--- a/app/src/main/res/layout/activity_editar_perfil.xml
+++ b/app/src/main/res/layout/activity_editar_perfil.xml
@@ -281,11 +281,17 @@
     </ScrollView>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
+
         android:id="@+id/scrollbarEditarPerfil"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="#334B68"
+        app:itemTextColor="#ffffff"
+
+        app:itemIconTint="@color/nav_item_colors"
+
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
