--- a/app/src/main/res/layout/activity_club.xml
+++ b/app/src/main/res/layout/activity_club.xml
@@ -12,6 +12,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="#334D6B"
+        app:itemTextColor="#ffffff"
+
+        app:itemIconTint="@color/nav_item_colors"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -135,7 +138,7 @@
                     android:paddingBottom="20dp"
 
 
-                    app:layout_constraintBottom_toTopOf="@+id/linea13"
+
                     app:layout_constraintTop_toBottomOf="@+id/textView13"
                     app:layout_constraintVertical_bias="0.587"
                     app:srcCompat="@drawable/ic_club_beneficios"
@@ -153,7 +156,7 @@
                     app:layout_constraintBottom_toBottomOf="@+id/btnPlata"
                     app:layout_constraintStart_toEndOf="@+id/btnPlata"
                     app:layout_constraintTop_toTopOf="@+id/btnPlata"
-                    app:srcCompat="@drawable/ic_club_niveles" />
+                    app:srcCompat="@drawable/ic_bene_club" />
 
 
                 <ImageButton
@@ -183,7 +186,7 @@
                     app:layout_constraintStart_toEndOf="@+id/btnOro"
                     app:layout_constraintTop_toTopOf="@+id/btnOro"
                     app:layout_constraintVertical_bias="0.0"
-                    app:srcCompat="@drawable/ic_club_niveles" />
+                    app:srcCompat="@drawable/ic_level_club" />
 
 
             </LinearLayout>
@@ -211,7 +214,7 @@
                 android:id="@+id/Platatxt"
                 android:layout_width="67dp"
                 android:layout_height="16dp"
-                android:layout_marginStart="31dp"
+                android:layout_marginStart="27dp"
 
 
                 android:fontFamily="@font/sourcesanspro_bold"
