--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -13,7 +13,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="#334D6B"
-        app:itemTextColor="#fff"
+
+        app:itemTextColor="#ffffff"
+
+        app:itemIconTint="@color/nav_item_colors"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
