--- a/app/src/main/res/layout/activity_producto.xml
+++ b/app/src/main/res/layout/activity_producto.xml
@@ -42,12 +42,11 @@
                 android:layout_width="65dp"
                 android:layout_height="62dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
                 android:background="@color/colorAccent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linea14"
                 app:srcCompat="@drawable/ic_flecha_back"
-                tools:ignore="VectorDrawableCompat" />
+                tools:ignore="VectorDrawableCompat"
+                tools:layout_editor_absoluteY="48dp" />
 
             <ImageView
                 android:id="@+id/imageProducto"
@@ -75,26 +74,13 @@
                 tools:srcCompat="@tools:sample/avatars" />
 
             <TextView
-                android:id="@+id/linea14"
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:background="@drawable/blue_rectangle"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
-
-
-                app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="MissingConstraints" />
-
-            <TextView
-                android:fontFamily="@font/sourcesanspro_bold"
-
                 android:id="@+id/tvNombreProducto"
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="52dp"
                 android:layout_marginEnd="32dp"
+                android:fontFamily="@font/sourcesanspro_bold"
                 android:text="Producto"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
@@ -102,7 +88,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.39"
                 app:layout_constraintStart_toEndOf="@+id/imageButton"
-                app:layout_constraintTop_toBottomOf="@+id/linea14" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/linea15"
@@ -195,10 +181,14 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="#334D6B"
+        app:itemTextColor="#ffffff"
+
+        app:itemIconTint="@color/nav_item_colors"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/botton_navigation">
+
 
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
