--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,11 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#FFFFFF</color>
-    <color name="principalBlue">#FFFFFF</color>
+    <color name="principalBlue">#334D6B</color>
     <color name="node">#F5A10C</color>
+    <color name="BottonNav">#FFFFFF</color>
+    <color name="Noselected">#172B3F</color>
+    <color name="NoColor"></color>
     
 
 </resources>
