--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -50,6 +50,7 @@
                 android:id="@+id/imageView18"
                 android:layout_width="19dp"
                 android:layout_height="86dp"
+                android:layout_marginTop="16dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_rectangulo_azul" />
