--- a/app/src/main/res/layout/activity_recuperar_cuenta.xml
+++ b/app/src/main/res/layout/activity_recuperar_cuenta.xml
@@ -42,7 +42,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_logobioazul" />
+        app:srcCompat="@drawable/ic_bio_logo" />
 
     <TextView
         android:fontFamily="@font/sourcesanspro_bold"
