--- a/app/src/main/res/layout/activity_editar_perfil.xml
+++ b/app/src/main/res/layout/activity_editar_perfil.xml
@@ -25,34 +25,26 @@
                 app:layout_constraintTop_toBottomOf="@+id/editText"
                 tools:ignore="MissingConstraints" />
 
-            <TextView
-                android:id="@+id/linea6"
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:background="#334B68"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:ignore="MissingConstraints" />
-
             <ImageButton
                 android:id="@+id/imageButton"
                 android:layout_width="65dp"
                 android:layout_height="62dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
                 android:background="@color/colorAccent"
+                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linea6"
+                app:layout_constraintTop_toTopOf="@+id/textView6"
                 app:srcCompat="@drawable/ic_flecha_back"
                 tools:ignore="VectorDrawableCompat" />
 
             <TextView
-                android:fontFamily="@font/sourcesanspro_bold"
+
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="28dp"
+                android:layout_marginTop="32dp"
                 android:layout_marginEnd="32dp"
+                android:fontFamily="@font/sourcesanspro_semibold"
                 android:text="Editar mi Perfil"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
@@ -60,7 +52,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.39"
                 app:layout_constraintStart_toEndOf="@+id/imageButton"
-                app:layout_constraintTop_toBottomOf="@+id/linea6" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/linea7"
@@ -86,6 +78,7 @@
                 app:srcCompat="@drawable/ic_logo_mi_cuenta_principal" />
 
             <EditText
+                android:fontFamily="@font/sourcesanspro_light"
                 android:id="@+id/editText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -102,6 +95,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/imageView9" />
 
             <EditText
+                android:fontFamily="@font/sourcesanspro_light"
                 android:id="@+id/editTextCambiarCorreo"
                 android:layout_width="307dp"
                 android:layout_height="50dp"
@@ -129,6 +123,7 @@
                 app:srcCompat="@drawable/ic_correo" />
 
             <EditText
+                android:fontFamily="@font/sourcesanspro_light"
                 android:id="@+id/editTextCambiarCelular"
                 android:layout_width="307dp"
                 android:layout_height="50dp"
@@ -208,6 +203,7 @@
                     android:text="Femenino" />
             </RadioGroup>
             <EditText
+                android:fontFamily="@font/sourcesanspro_light"
                 android:id="@+id/editTextCambiarFechaNacimiento"
                 android:layout_width="307dp"
                 android:layout_height="50dp"
@@ -235,6 +231,7 @@
                 app:srcCompat="@drawable/ic_fecha" />
 
             <EditText
+                android:fontFamily="@font/sourcesanspro_light"
                 android:id="@+id/editTextCambiarLugarOrigen"
                 android:layout_width="307dp"
                 android:layout_height="50dp"
@@ -262,16 +259,29 @@
                 app:srcCompat="@drawable/ic_lugar" />
 
             <Button
-                android:fontFamily="@font/sourcesanspro_bold"
                 android:id="@+id/buttonCerrarSesion"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:layout_marginBottom="64dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="68dp"
                 android:background="@drawable/ic_fondolleno"
+                android:fontFamily="@font/sourcesanspro_semibold"
                 android:text="Cerrar Sesion"
                 android:textColor="@color/colorAccent"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/btnGuardar"
+                app:layout_constraintStart_toStartOf="@+id/btnGuardar"
+                app:layout_constraintTop_toBottomOf="@+id/btnGuardar" />
+
+            <Button
+                android:id="@+id/btnGuardar"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:background="@drawable/ic_fondolleno"
+                android:fontFamily="@font/sourcesanspro_semibold"
+                android:text="Guardar Cambios"
+                android:textColor="@color/colorAccent"
                 app:layout_constraintEnd_toEndOf="@+id/editTextCambiarLugarOrigen"
                 app:layout_constraintStart_toStartOf="@+id/editTextCambiarLugarOrigen"
                 app:layout_constraintTop_toBottomOf="@+id/editTextCambiarLugarOrigen" />
@@ -280,22 +290,7 @@
 
     </ScrollView>
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
 
-        android:id="@+id/scrollbarEditarPerfil"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="#334B68"
-        app:itemTextColor="#ffffff"
-
-        app:itemIconTint="@color/nav_item_colors"
-
-
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/botton_navigation" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
