--- a/app/src/main/res/layout/activity_mi_cuenta.xml
+++ b/app/src/main/res/layout/activity_mi_cuenta.xml
@@ -65,7 +65,7 @@
                 android:text="Mi Cuenta"
                 android:textColor="@android:color/black"
                 android:textSize="36sp"
-                android:fontFamily="@font/sourcesanspro_bold"
+                android:fontFamily="@font/sourcesanspro_semibold"
 
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -123,7 +123,8 @@
                 app:layout_constraintTop_toBottomOf="@+id/SaldoBioCoins" />
 
             <TextView
-                android:fontFamily="@font/sourcesanspro_black"
+                android:fontFamily="@font/sourcesanspro_light"
+                android:textStyle="bold"
                 android:id="@+id/SaldoBioCoins"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
@@ -148,8 +149,9 @@
                 tools:ignore="VectorDrawableCompat" />
 
             <TextView
-                android:fontFamily="@font/sourcesanspro_bold"
+                android:fontFamily="@font/sourcesanspro_light"
                 android:id="@+id/NombreNivel"
+                android:textStyle="bold"
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -167,7 +169,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
             <TextView
-                android:fontFamily="@font/sourcesanspro_bold"
+                android:fontFamily="@font/sourcesanspro_regular"
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -193,7 +195,7 @@
 
             <TextView
 
-                android:fontFamily="@font/sourcesanspro_bold"
+                android:fontFamily="@font/sourcesanspro_regular"
                 android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -209,7 +211,8 @@
                 app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
             <TextView
-                android:fontFamily="@font/sourcesanspro_black"
+                android:fontFamily="@font/sourcesanspro_light"
+                android:textStyle="bold"
                 android:id="@+id/telefonoMICuenta"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -232,7 +235,7 @@
                 app:srcCompat="@drawable/ic_genero_otro" />
 
             <TextView
-                android:fontFamily="@font/sourcesanspro_bold"
+                android:fontFamily="@font/sourcesanspro_regular"
                 android:id="@+id/textView10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -246,7 +249,8 @@
                 app:layout_constraintTop_toBottomOf="@+id/imageGeneroMiCuenta" />
 
             <TextView
-                android:fontFamily="@font/sourcesanspro_black"
+                android:fontFamily="@font/sourcesanspro_light"
+                android:textStyle="bold"
 
                 android:id="@+id/generoMICuenta"
                 android:layout_width="wrap_content"
@@ -285,7 +289,7 @@
                 tools:ignore="VectorDrawableCompat" />
 
             <TextView
-                android:fontFamily="@font/sourcesanspro_bold"
+                android:fontFamily="@font/sourcesanspro_regular"
                 android:id="@+id/textView11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -299,7 +303,8 @@
                 app:layout_constraintTop_toBottomOf="@+id/imageFechaNacMiCuenta" />
 
             <TextView
-                android:fontFamily="@font/sourcesanspro_black"
+                android:fontFamily="@font/sourcesanspro_light"
+                android:textStyle="bold"
                 android:id="@+id/fechaNacMICuenta"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -337,7 +342,7 @@
                 tools:ignore="VectorDrawableCompat" />
 
             <TextView
-                android:fontFamily="@font/sourcesanspro_bold"
+                android:fontFamily="@font/sourcesanspro_regular"
                 android:id="@+id/textView12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -351,7 +356,8 @@
                 app:layout_constraintTop_toBottomOf="@+id/imageLugarOrigen" />
 
             <TextView
-                android:fontFamily="@font/sourcesanspro_black"
+                android:fontFamily="@font/sourcesanspro_light"
+                android:textStyle="bold"
                 android:id="@+id/lugarOrigenMICuenta"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -366,6 +372,7 @@
 
             <Button
                 android:id="@+id/buttonEditarCuenta"
+                android:fontFamily="@font/sourcesanspro_semibold"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="35dp"
@@ -379,6 +386,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/lugarOrigenMICuenta" />
 
             <Button
+                android:fontFamily="@font/sourcesanspro_semibold"
                 android:id="@+id/buttonCerrarSesion"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
