--- a/app/src/main/res/layout/activity_editar_perfil.xml
+++ b/app/src/main/res/layout/activity_editar_perfil.xml
@@ -280,6 +280,7 @@
                 android:layout_marginTop="24dp"
                 android:background="@drawable/ic_fondolleno"
                 android:fontFamily="@font/sourcesanspro_semibold"
+                android:onClick="ChangeActivities"
                 android:text="Guardar Cambios"
                 android:textColor="@color/colorAccent"
                 app:layout_constraintEnd_toEndOf="@+id/editTextCambiarLugarOrigen"
