--- a/app/src/main/res/layout/activity_mi_cuenta.xml
+++ b/app/src/main/res/layout/activity_mi_cuenta.xml
@@ -120,12 +120,12 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/SaldoBioCoins" />
+                app:layout_constraintTop_toBottomOf="@+id/tvCorreo" />
 
             <TextView
                 android:fontFamily="@font/sourcesanspro_light"
                 android:textStyle="bold"
-                android:id="@+id/SaldoBioCoins"
+                android:id="@+id/tvCorreo"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_marginTop="8dp"
