avance ya con los botones de back y el historial maquetado para que el buen gopa le ponga un diseño 10/10 >u<

--- a/app/src/main/res/layout/activity_club.xml
+++ b/app/src/main/res/layout/activity_club.xml
@@ -57,8 +57,10 @@
                 android:layout_width="91dp"
                 android:layout_height="83dp"
                 android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="25dp"
                 android:background="@color/colorAccent"
+                android:onClick="BackInCuenta"
                 app:layout_constraintEnd_toStartOf="@+id/textView"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
