--- a/app/src/main/res/layout/activity_editar_perfil.xml
+++ b/app/src/main/res/layout/activity_editar_perfil.xml
@@ -22,11 +22,11 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editText"
+                app:layout_constraintTop_toBottomOf="@+id/etNombreEditar"
                 tools:ignore="MissingConstraints" />
 
             <ImageButton
-                android:id="@+id/imageButton"
+                android:id="@+id/flechaBackEditarPerfil"
                 android:layout_width="65dp"
                 android:layout_height="62dp"
                 android:layout_marginStart="8dp"
@@ -51,7 +51,7 @@
                 android:textSize="30sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.39"
-                app:layout_constraintStart_toEndOf="@+id/imageButton"
+                app:layout_constraintStart_toEndOf="@+id/flechaBackEditarPerfil"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
@@ -79,7 +79,7 @@
 
             <EditText
                 android:fontFamily="@font/sourcesanspro_light"
-                android:id="@+id/editText"
+                android:id="@+id/etNombreEditar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
