--- a/app/src/main/res/layout/activity_mi_cuenta.xml
+++ b/app/src/main/res/layout/activity_mi_cuenta.xml
@@ -41,7 +41,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/NombreNivel" />
+                app:layout_constraintTop_toBottomOf="@+id/nombreUsuario" />
 
             <ImageView
                 android:id="@+id/imageView2"
@@ -72,7 +72,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageButton
-                android:id="@+id/btnBackto"
+                android:id="@+id/btnBackMiCuenta"
                 android:layout_width="91dp"
                 android:layout_height="83dp"
                 android:layout_marginStart="8dp"
@@ -150,7 +150,7 @@
 
             <TextView
                 android:fontFamily="@font/sourcesanspro_light"
-                android:id="@+id/NombreNivel"
+                android:id="@+id/nombreUsuario"
                 android:textStyle="bold"
 
                 android:layout_width="wrap_content"
