--- a/app/src/main/res/layout/activity_detalles.xml
+++ b/app/src/main/res/layout/activity_detalles.xml
@@ -18,24 +18,11 @@
         tools:layout_editor_absoluteY="0dp"
         tools:visibility="visible">
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottomNavigationView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:background="#334D6B"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:menu="@menu/botton_navigation">
-
-
-        </com.google.android.material.bottomnavigation.BottomNavigationView>
 
         <ScrollView
             android:id="@+id/scrollView2"
             android:layout_width="417dp"
-            android:layout_height="735dp"
+            android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -45,6 +32,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginEnd="4dp"
+                android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -170,9 +158,9 @@
 
                 <TextView
                     android:id="@+id/telefonoMICuenta7"
-                    android:layout_width="181dp"
-                    android:layout_height="48dp"
-                    android:layout_marginStart="36dp"
+                    android:layout_width="156dp"
+                    android:layout_height="49dp"
+                    android:layout_marginStart="28dp"
                     android:layout_marginBottom="8dp"
                     android:lineSpacingExtra="8sp"
                     android:text="Phototherm Max Fluide SPF 100"
@@ -235,13 +223,49 @@
                     app:srcCompat="@drawable/ic_d_icono5" />
 
                 <ImageView
+                    android:id="@+id/imageView27"
+                    android:layout_width="0dp"
+                    android:layout_height="27dp"
+                    android:layout_marginTop="388dp"
+                    app:layout_constraintEnd_toEndOf="@+id/imageView25"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="@+id/imageView25"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView25"
+                    app:srcCompat="@drawable/ic_detalle_money" />
+
+                <ImageView
+                    android:id="@+id/imageView29"
+                    android:layout_width="0dp"
+                    android:layout_height="27dp"
+                    android:layout_marginTop="332dp"
+                    app:layout_constraintEnd_toEndOf="@+id/imageView25"
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintStart_toStartOf="@+id/imageView25"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView25"
+                    app:srcCompat="@drawable/ic_detalle_porcentaje" />
+
+                <ImageView
+                    android:id="@+id/imageView28"
+                    android:layout_width="0dp"
+                    android:layout_height="27dp"
+                    android:layout_marginTop="280dp"
+                    app:layout_constraintEnd_toEndOf="@+id/imageView25"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="@+id/imageView25"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView25"
+                    app:srcCompat="@drawable/ic_detalle_money" />
+
+                <ImageView
                     android:id="@+id/imageView26"
                     android:layout_width="145dp"
                     android:layout_height="116dp"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginStart="28dp"
                     android:layout_marginTop="32dp"
+                    android:layout_marginBottom="102dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView24"
+                    app:layout_constraintVertical_bias="0.0"
                     app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />
 
                 <ImageView
@@ -254,6 +278,57 @@
                     app:layout_constraintStart_toStartOf="@+id/imageView23"
                     app:layout_constraintTop_toBottomOf="@+id/imageView23"
                     app:srcCompat="@drawable/ic_d_icono4" />
+
+                <Button
+                    android:id="@+id/button2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="19dp"
+                    android:text="Button"
+                    app:layout_constraintEnd_toEndOf="@+id/telefonoMICuenta7"
+                    app:layout_constraintStart_toStartOf="@+id/telefonoMICuenta7"
+                    app:layout_constraintTop_toBottomOf="@+id/telefonoMICuenta7" />
+
+                <TextView
+                    android:id="@+id/textView26"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="220dp"
+                    android:text="Costo de producto:"
+                    android:textColor="#000000"
+                    android:textSize="18sp"
+                    app:layout_constraintEnd_toEndOf="@+id/telefonoMICuenta5"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="@+id/telefonoMICuenta5"
+                    app:layout_constraintTop_toBottomOf="@+id/telefonoMICuenta5" />
+
+                <TextView
+                    android:id="@+id/textView27"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="32dp"
+                    android:text="Descuento de cupon:"
+                    android:textColor="#000000"
+                    android:textSize="18sp"
+                    app:layout_constraintEnd_toEndOf="@+id/textView26"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="@+id/textView26"
+                    app:layout_constraintTop_toBottomOf="@+id/textView26" />
+
+                <TextView
+                    android:id="@+id/textView28"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="28dp"
+                    android:layout_marginBottom="16dp"
+                    android:text="Costo total:"
+                    android:textColor="#000000"
+                    android:textSize="18sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/textView27"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="@+id/textView27"
+                    app:layout_constraintTop_toBottomOf="@+id/textView27" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
