--- a/app/src/main/res/layout/activity_niveles.xml
+++ b/app/src/main/res/layout/activity_niveles.xml
@@ -34,14 +34,15 @@
 
 
     <ImageButton
-        android:id="@+id/imageButton3"
-        android:layout_width="91dp"
-        android:layout_height="83dp"
+        android:id="@+id/btnback"
+        android:layout_width="75dp"
+        android:layout_height="69dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:background="@color/colorAccent"
         app:layout_constraintEnd_toStartOf="@+id/textView13"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.14"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_flecha_back" />
