--- a/app/src/main/res/layout/activity_cupones.xml
+++ b/app/src/main/res/layout/activity_cupones.xml
@@ -6,4 +6,35 @@
     android:layout_height="match_parent"
     tools:context=".activities.CuponesActivity">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvCupones"
+        android:layout_width="wrap_content"
+        android:layout_height="405dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView21" />
+
+    <TextView
+        android:id="@+id/textView21"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="Cupones"
+        android:textColor="@color/principalBlue"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/btnBackCupones"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:backgroundTint="@color/colorAccent"
+        app:layout_constraintEnd_toStartOf="@+id/textView21"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_flecha_back" />
 </androidx.constraintlayout.widget.ConstraintLayout>
