--- a/app/src/main/res/layout/item_producto_en_descuento.xml
+++ b/app/src/main/res/layout/item_producto_en_descuento.xml
@@ -9,7 +9,7 @@
     android:background="@drawable/ic_linea_horizontal"
     android:backgroundTint="#334B68"
 
-
+    android:layout_margin="5dp"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
     cardview:cardCornerRadius="4dp">
@@ -20,7 +20,7 @@
 
         <LinearLayout
             android:id="@+id/linearLayout2"
-            android:layout_width="wrap_content"
+            android:layout_width="120dp"
             android:layout_height="match_parent"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
@@ -33,11 +33,12 @@
 
             <ImageView
                 android:id="@+id/imagenProductoDescuento"
-                android:layout_width="match_parent"
+                android:layout_width="120dp"
                 android:layout_height="150dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:srcCompat="@tools:sample/avatars" />
+                tools:srcCompat="@tools:sample/avatars"
+                />
 
             <TextView
                 android:id="@+id/precioDescuento"
