--- a/app/src/main/res/layout/activity_cupones.xml
+++ b/app/src/main/res/layout/activity_cupones.xml
@@ -9,7 +9,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvCupones"
         android:layout_width="wrap_content"
-        android:layout_height="405dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        android:foregroundGravity="center_vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
