--- a/app/src/main/res/layout/activity_historial.xml
+++ b/app/src/main/res/layout/activity_historial.xml
@@ -23,15 +23,16 @@
         android:id="@+id/rvHistorial"
         android:layout_width="333dp"
         android:layout_height="504dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
 
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="24dp"
         android:foregroundGravity="center_vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView24" />
+        app:layout_constraintEnd_toEndOf="@+id/textView24"
+        app:layout_constraintHorizontal_bias="0.466"
+        app:layout_constraintStart_toStartOf="@+id/textView24"
+        app:layout_constraintTop_toBottomOf="@+id/textView24"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/textView24"
